  18 Feb 2018; AzP <peterasplund@gentoo.se> metadata.xml, renderdoc-9999.ebuild:
  Clean up all complaints by repoman