@@ -1,3 +1,5 @@
+DIST v1.0.tar.gz 39253525 SHA256 ab43370a97ee7c35b7336b9b8c90d3621e340b48bb2a9e75636bb49ded0825ec SHA512 58f32805fd7677586ba93fdad63675a5ad182c5c44f5048375494de08d2fd06a024293af3eb581a764f94d768d2c1483146e2dc86f93da4496fb2b4007de7ce1 WHIRLPOOL 78eb1e660f6a07856ace4ed5b5e07188fa5ecdb79689e556b860d51f5faa952f3e5dd4daaed39b590203bd1f05b980a3d453eeda63b5d928035f09bac6cb061f
+EBUILD renderdoc-1.0.ebuild 945 SHA256 280aeca8b78d86f6881aa79310cccc84d410b0936f4c2fc740bdd5f7b2e4778a SHA512 b3edcd1c14b4bee5f0a9f68dcfa3d59f1c4402d66e56500e2be2081e9c1506ee42237df1971937188f0bde8590f1df0079aea55ebe913b30f4af3931494ded79 WHIRLPOOL 8a9ba3bf1b15cc3f06d63485ac7e361ab7f874c9cded11baef0effab2ed4c2c79c639d3dc3eab4a6a34db12074d5a830287221dd07c5f0254113c0d1d10480a4
 EBUILD renderdoc-9999.ebuild 959 SHA256 445c04b2adff5162aa22fb81b5eb0e54bbae5424754479ef22547658710c7d71 SHA512 e8151a45f98509d79013c22d604f9d6b28e6194494db50e9832015e5d6bba747353991e53574fded392fb61634ffed42623a3ef6037a5be4b5873c165f4061b6 WHIRLPOOL 1c046c15238cf886767adb1edd70d0a0e6a2c4976b9487b746aaf42cc7b3c478c771d20f0d5e585ed0de5995d369ece4119bd08ba66db32a3216a045d0296d25
-MISC ChangeLog 118 SHA256 b2d69795a5430cb5708e838a0e456310ddabb2ddf0ee65cf5d1fb226494e657b SHA512 0e60212498ca5c07a0f55fea291847b2b931d9cde67863886b9f61401f9912510afeb61be08f2e51c023e4e24b4b0b69f2fbbdc1a265a2bab26370bbd98f76c6 WHIRLPOOL d6c738d1722005e73954a712fdee5058d4b656739ecafa851e0e790f14d032d14779c79f946b3ad97a029f934ce53c36f7f357d2e40f2ad99c8f8f7f85fe724d
+MISC ChangeLog 284 SHA256 e67034b9b26cfaff995d02f6ba4e3568b4a88661b6239059fa39b87eb21852b5 SHA512 8aaadf879e9899d51042d1efd67dad0b08308a901e0cf78d71f7054db9e23231909c9191c64e3c311d2b987187c32c8c582704c730ed916b2091b6fe7b1840a5 WHIRLPOOL d93d76f27bc49553afc83e365cb21139e1d13aaed7cd2d377bba487d9c3ec22f5ce4a965eb8a96f133c2ee6ea8d43e1c0a93ad60730f5bb4f0ecd713367c5e19
 MISC metadata.xml 617 SHA256 e9fbacbe415bc07df43e7f8e712ab879f7cdd471e7fb8eca804494103418b8fc SHA512 4cad8316dce107b2cd7e7eb426a106388563955c5ba333b1fcb024c4265c0d7b2fca78dcb2abdfd737fb8fe06066af22a3fec7d0db66870ba2f6739e7b9bea77 WHIRLPOOL 094c37a0562e2f09d9998d06d4917b474f599a57804a09300dba83e3fe8d489e4781d2d5924208fccb1bdea866fd42cac7abae9f72083284f24b8bb75e1d5a83
